--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ padding: 1rem;
   max-width: 800px;
   margin: 0 auto;
 }
+.info span {
+  display: inline-block;
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  max-width: 100%;
+}
 #bldg-history,
 #bldg-desc {
   display: inline-block;
